--- a/trunk/ android-app-test-nextive/Android App Test/AndroidManifest.xml
+++ b/trunk/ android-app-test-nextive/Android App Test/AndroidManifest.xml
@@ -26,6 +26,7 @@
     <activity android:name="ShareActivity"/>
     <activity android:name="SettingsActivity"/>
     <activity android:name="CreateContactsActivity"/>
+    <activity android:name="ModifyRecordActivity"/>
   </application>
   <supports-screens
     android:resizeable="true"
